<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.42">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top|left|center_horizontal"
            android:layout_marginLeft="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="weatherDesc"
                android:id="@+id/weatherDesc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_text"
                android:id="@+id/temperature" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_feel_text"
                android:id="@+id/temperature_feel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure_text"
                android:id="@+id/pressure" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windspeed_text"
                android:id="@+id/wind_speed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise_text"
                android:id="@+id/sunrise_and_sunset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moonrise_text"
                android:id="@+id/moonrise_and_moonset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_text"
                android:id="@+id/humidity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudcover_text"
                android:id="@+id/cloudcover" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipMM_text"
                android:id="@+id/precipmm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WindGustKmph_еуче"
                android:id="@+id/windgustkmph" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chanceofrain_text"
                android:id="@+id/chanceofrain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chanceofsnow_text"
                android:id="@+id/chanceofsnow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chanceoffog_text"
                android:id="@+id/chanceoffog" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="210dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/temperature_value"
                android:layout_marginTop="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/temperature_feel_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/pressure_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/windspeed_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/sunrise_and_sunset_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/moonrise_and_moonset_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/humidity_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/cloudcover_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/precipmm_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/windgustkmph_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/chanceofrain_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/chanceofsnow_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/chanceoffog_value" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icon"
            android:layout_gravity="left|top" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_settings_text"
            android:id="@+id/button_settings"
            android:layout_gravity="bottom|right" />

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weather_recyclerlist"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.58" />
</LinearLayout>
