<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_for_list"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="weatherDesc"
        android:id="@+id/weatherDesc_inlist"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/icon_for_list"
        android:layout_toEndOf="@+id/icon_for_list"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_text"
        android:id="@+id/temperature_inlist"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/icon_for_list"
        android:layout_toEndOf="@+id/icon_for_list"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_feel_text"
        android:id="@+id/temperature_feel_inlist"
        android:layout_below="@+id/temperature_inlist"
        android:layout_toRightOf="@+id/icon_for_list"
        android:layout_toEndOf="@+id/icon_for_list" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_text"
        android:id="@+id/pressure_inlist"
        android:layout_below="@+id/temperature_feel_inlist"
        android:layout_toRightOf="@+id/icon_for_list"
        android:layout_toEndOf="@+id/icon_for_list" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Date"
        android:id="@+id/date_inlist"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="New Text"
        android:id="@+id/temperature_value_inlist"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/icon_for_list"
        android:layout_marginLeft="130dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="New Text"
        android:id="@+id/temperature_feel_value_inlist"
        android:layout_below="@+id/temperature_value_inlist"
        android:layout_alignLeft="@+id/temperature_value_inlist"
        android:layout_alignStart="@+id/temperature_value_inlist" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="New Text"
        android:id="@+id/pressure_value_inlist"
        android:layout_below="@+id/temperature_feel_value_inlist"
        android:layout_alignLeft="@+id/temperature_feel_value_inlist"
        android:layout_alignStart="@+id/temperature_feel_value_inlist" />

</RelativeLayout>